--- a/public/monitor.html
+++ b/public/monitor.html
@@ -55,7 +55,7 @@
       }, 200);
       draw();
       function reset() {
-        fetch('/monitor/rewet');
+        fetch('/monitor/reset');
       }
     </script>
     <div id="root">
